Next version is 2.5.1 : - Fix Bad submit button align - Fix admin panel display issue - Update es_ES, thanks to : jpr928
git-svn-id: http://piwigo.org/svn/extensions/Register_FluxBB@21431 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/template/register_fluxbb.css
+++ b/admin/template/register_fluxbb.css
@@ -48,16 +48,23 @@
 }
 
 /* Bloc expand-collapse instructions */
+.instructionBlock
+{
+  border: 1px solid #666;
+  margin: 5px;
+  overflow: hidden;
+}
+
 .instructionBlockHeaderCollapsed, .instructionBlockHeaderExpanded
 {
-  background-color:#111;
-  background-position:15px center;
-  background-repeat:no-repeat;
-  color:#ff3363;
-  cursor:pointer;
-  font-size:110%;
-  overflow:hidden;
-  padding:8px 41px;
+  background-color: #111;
+  background-position: 15px center;
+  background-repeat: no-repeat;
+  color: #ff3363;
+  cursor: pointer;
+  font-size: 110%;
+  overflow: hidden;
+  padding: 8px 41px;
   text-align: left;
 }
 
@@ -65,18 +72,8 @@
 {
   border-bottom: none;
 }
- 
-.instructionBlockHeaderCollapsed
-{
-  background-image: url(./icon/expand.gif);
-}
-
-.instructionBlockHeaderExpanded
-{
-  background-image: url(./icon/collapse.gif);
-}
 
 .instructionBlockContent
 {
-  padding:0 15px 15px;
+  padding: 0 15px 15px;
 }
